--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -73,7 +73,7 @@
 									</div>
 								</div>
 				            </div>
-				            <div class='cell width-30'><div class="progress-radial progress-{{eachSubCat.prc_round}}"><div class="overlay">{{eachSubCat.prc_actual}}<sup>%</sup></div></div></div>
+				            <div class='cell width-30'><div class="progress-radial progress-{{eachSubCat.prc_round}}"><div class="overlay">{{eachSubCat.prc_round}}<sup>%</sup></div></div></div>
 				        </div>
 			    	</div>
 			    </div>
@@ -124,7 +124,7 @@
 									</div>
 								</div>
 				            </div>
-				            <div class='cell width-30'><div class="progress-radial progress-{{eachSubCat.prc_round}}"><div class="overlay">{{eachSubCat.prc_actual}}<sup>%</sup></div></div></div>
+				            <div class='cell width-30'><div class="progress-radial progress-{{eachSubCat.prc_round}}"><div class="overlay">{{eachSubCat.prc_round}}<sup>%</sup></div></div></div>
 				        </div>
 			    	</div>
 			    </div>
@@ -175,7 +175,7 @@
 									</div>
 								</div>
 				            </div>
-				            <div class='cell width-30'><div class="progress-radial progress-{{eachSubCat.prc_round}}"><div class="overlay">{{eachSubCat.prc_actual}}<sup>%</sup></div></div></div>
+				            <div class='cell width-30'><div class="progress-radial progress-{{eachSubCat.prc_round}}"><div class="overlay">{{eachSubCat.prc_round}}<sup>%</sup></div></div></div>
 				        </div>
 			    	</div>
 			    </div>
