retailer sales order

--- a/src/app/app/basic-call-procedure/components/bcp-offers.component.html
+++ b/src/app/app/basic-call-procedure/components/bcp-offers.component.html
@@ -27,7 +27,7 @@
     </div>
 	
 	<div class="no-divider">
-		<div class= "button" (click)="gotoRetailerSalesOrder()">
+		<div class= "button" (click)="gotoAddEditLoadTransfer()">
 			<div class="button-identifier" id="next-collection">NEXT</div>
 		</div>
 	</div>
