--- a/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
+++ b/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
@@ -1,8 +1,8 @@
-<div class="container-body">
+<div class='container-body'>
     <div class="item-container sub">
         <div class='container'>
             <div class='cell'>
-                <div class='container'><div class='cell width-100 padding-left-5 large green'>Rose Cell</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 green'>Rose Cell</div></div>
             </div>
             <div class='cell'>
                 <div class='container'><div class='cell width-50 italic green'>(99999900003)</div></div>
@@ -10,182 +10,82 @@
         </div>
     </div>
     <div class="item-container">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5 green'>Order No. 12345678</div></div>
-	        </div>
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>2016-04-21 13:19</div></div>
-	        </div>
-	    </div>
-	    <div class='container'>
-            <div class='cell'>
-            	<div class='container'><div class='cell width-100 align-center bold large'>Total Sales Order</div></div>
-            	<div class='container'><div class='cell width-100 align-center bold large green'>13,950.00 ₱</div></div>
+        <div class="bcp-step-container">
+            <div class="step-field">
+                <div class="step-field-item"><div class="step-circle">1</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle">2</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle">3</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle vivid-pink">4</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle">5</div></div>
             </div>
         </div>
     </div>
-    <div class="item-container">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5'>Total Transfer Load</div></div>
-	        </div>
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>12,000.00 ₱</div></div>
-	        </div>
-	    </div>
+    <div class='item-container'>
+        <div class='container'>
+            <div class='cell'>
+                <div class='container'><div class='cell padding-left-5 width-50 green'>Order No. 12345678</div></div>
+            </div>
+            <div class='cell'>
+                <div class='container'><div class='cell align-right width-40'>2016-04-21 13:19
+</div></div>
+            </div>
+            <div class='cell width-10'></div>
+        </div>
     </div>
-    <div class="item-container">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5'>SMART</div></div>
-	        </div>
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>99999000003</div></div>
-	        </div>
-	    </div>
+    <div class='item-container'>
+        <div class='container'>
+            <div class='cell'>
+                <div class='container'><div class='cell padding-left-5 width-50'>Total Sales Order</div></div>
+            </div>
+            <div class='cell'>
+                <div class='container'><div class='cell align-right width-40'>P 5,700</div></div>
+            </div>
+            <div class='cell width-10'></div>
+        </div>
     </div>
-    <div class="item-container sub">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>Transfer Amount</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>Promo Code</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>Promo Amount</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>Total Amount</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>RRN</div></div>
-	        </div>
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>10,000.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>load131</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>100.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>9,900.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>1234567</div></div>
-	        </div>
-	    </div>
+    <div>
+        <div class='item-container sub'>
+            <div class='container'>
+                <div class='cell'>
+                    <div class='container'><div class='cell padding-left-10 width-50 grey'>Total Load Transfer</div></div>
+                    <div class='container'><div class='cell padding-left-10 width-50 grey'>Total Physical Order</div></div>
+                </div>
+                <div class='cell'>
+                    <div class='container'><div class='cell align-right width-40'>P 4,000</div></div>
+                    <div class='container'><div class='cell align-right width-40'>P 2,000</div></div>
+                </div>
+                <div class='cell width-10'></div>
+            </div>
+        </div>
     </div>
-    <div class="item-container">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5'>SUN</div></div>
-	        </div>
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>99999000003</div></div>
-	        </div>
-	    </div>
-    </div>
-    <div class="item-container sub">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>Transfer Amount</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>Promo Code</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>Promo Amount</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>Total Amount</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10 grey'>RRN</div></div>
-	        </div>
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>2,000.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>load354</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>100.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>1,900.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>1234567</div></div>
-	        </div>
-	    </div>
-    </div>
-    <div class="item-container">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5'>Total Physical Order</div></div>
-	        </div>
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>2,000.00 ₱</div></div>
-	        </div>
-	    </div>
-    </div>
-    <div class="item-container">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-100 padding-left-5'>Pinoy SIM</div></div>
-                <div class='container'>
-                	<div class='cell width-100 padding-left-5'>
-				        <div class="container">
-					        <div class='cell'>
-				                <div class='container'><div class='cell width-50 grey'>Suggested Order</div></div>
-					        </div>
-					        <div class='cell'>
-				                <div class='container'><div class='cell width-50 padding-right-5 align-right'>500</div></div>
-					        </div>
-					    </div>
-					</div>
-				</div>
-	        </div>
-	    </div>
-    </div>
-    <div class="item-container sub">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-100 padding-left-10'>SKU1</div></div>
-                <div class='container'>
-                	<div class='cell width-100 padding-left-10'>
-				        <div class="container">
-					        <div class='cell'>
-				                <div class='container'><div class='cell width-50 grey'>Unit Price</div></div>
-				                <div class='container'><div class='cell width-50 grey'>Order Quantity</div></div>
-				                <div class='container'><div class='cell width-50 grey'>Amount per SKU</div></div>
-				                <div class='container'><div class='cell width-50 grey'>Promo Code</div></div>
-				                <div class='container'><div class='cell width-50 grey'>Promo Amount</div></div>
-				                <div class='container'><div class='cell width-50 grey'>Total Amount</div></div>
-					        </div>
-					        <div class='cell'>
-				                <div class='container'><div class='cell width-50 padding-right-5 align-right'>200.00 ₱</div></div>
-				                <div class='container'><div class='cell width-50 padding-right-5 align-right'>10</div></div>
-				                <div class='container'><div class='cell width-50 padding-right-5 align-right'>2,000.00 ₱</div></div>
-				                <div class='container'><div class='cell width-50 padding-right-5 align-right'>phy1234</div></div>
-				                <div class='container'><div class='cell width-50 padding-right-5 align-right'>100.00 ₱</div></div>
-				                <div class='container'><div class='cell width-50 padding-right-5 align-right'>1,900.00 ₱</div></div>
-					        </div>
-					    </div>
-					</div>
-				</div>
-	        </div>
-	    </div>
-    </div>
-    <div class="item-container">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-100 padding-left-5'>Order Payment</div></div>
-	        </div>
-	    </div>
-    </div>
-    <div class="item-container sub">
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-10'>Price Before Promo</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10'>Promo Amount</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10'>Price After Promo</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10'>Payment Amount</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10'>Balance</div></div>
-                <div class='container'><div class='cell width-50 padding-left-10'>Payment Status</div></div>
-	        </div>
-	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>14,000.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>300.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>13,700.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-70" id="amount"/></div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>3,700.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right'>partial</div></div>
-	        </div>
-	    </div>
-        <div class="container">
-	        <div class='cell'>
-                <div class='container'><div class='cell width-100 padding-left-10'>Remark</div></div>
-                <div class='container'><div class='cell width-100 padding-left-10 padding-right-5'><textarea name="textarea" rows="10" cols="50"></textarea></div></div>
-	        </div>
-	    </div>
-	</div>
 
-    <div class="no-divider">
-        <div class= "button" (click)="gotoUnservedOrder()">
-            <div class="button-identifier">DONE</div>
-        </div>      
+    <div class='item-container'>
+        <div class='container'>
+            <div class='cell padding-left-5 width-50'>Sales Order Payment</div>
+        </div>
     </div>
-</div>
+
+    <div class='item-container sub'>
+        <div class='container'>
+            <div class='cell'>
+                <div class='container'><div class='cell padding-left-10 width-50 grey'>Total Load Transfer</div></div>
+                <div class='container'><div class='cell padding-left-10 width-50 grey'>Total Physical Order</div></div>
+            </div>
+            <div class='cell'>
+                <div class='container'><div class='cell align-right width-40'>P 5,700</div></div>
+                <div class='container'><div class='cell align-right width-40 green'>Full</div></div>
+            </div>
+            <div class='cell width-10'></div>
+        </div>
+    </div>
+
+
+    <div class='no-divider'>
+        <div class='button' id='done'>
+            <div class='button-identifier' (click)="gotoUnservedOrder()">DONE</div>
+        </div>
+    </div>
