--- a/src/app/scss/_mpin.scss
+++ b/src/app/scss/_mpin.scss
@@ -37,8 +37,9 @@ $container-mpin-height: 100%;
         background: 
         url("../img/smart-logo.png")
         no-repeat;
-        background-position-x: center;
-        background-position-y: center;
+        background-position:center;
+        // background-position-x: center;
+        // background-position-y: center;
         background-size: 30vw;
         z-index: 90;
 		position: fixed;
@@ -128,6 +129,9 @@ $container-mpin-height: 100%;
 			padding: 3% 0% 3% 0%;
 			font-size: 4vw;
     		color : #FFF;
+		}
+		.submit-button:active{
+			background-color: #33c68d;
 		}
 	}
 }
