--- a/src/app/app/basic-call-procedure/components/add-edit-physical-order.component.html
+++ b/src/app/app/basic-call-procedure/components/add-edit-physical-order.component.html
@@ -95,7 +95,7 @@
     </div>
     <div class='no-divider'>
         <div class='button' id='save'>
-            <div class='button-identifier' (click)="gotoRetailerSalesOrder()">SAVE</div>
+            <div class='button-identifier' (click)="addPhysicalOrder()">CONFIRM</div>
         </div>
     </div>
 </div>    
