--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -235,87 +235,73 @@ ICON - MENU
 
 &.mydashboard {
     background: url(#{$icon-round-grad-mydashboard})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 
 &.bcp {
     background: url(#{$icon-round-grad-bcp})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.inventory {
     background: url(#{$icon-round-grad-inventory})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.logout {
     background: url(#{$icon-round-grad-logout})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.remittance {
     background: url(#{$icon-round-grad-remittance})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.stock-return {
     background: url(#{$icon-round-grad-stock-return})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.target {
     background: url(#{$icon-round-grad-target})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.acc-receivable {
     background: url(#{$icon-round-grad-acc-receivable})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.alert {
     background: url(#{$icon-round-grad-alert})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.collection {
     background: url(#{$icon-round-grad-collection})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.retailer-route {
     background: url(#{$icon-round-grad-retailer-route})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.sync {
     background: url(#{$icon-round-grad-sync})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.visited {
     background: url(#{$icon-round-grad-visited})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 &.unserved-order {
     background: url(#{$icon-round-grad-unserved-order})no-repeat;
-    background-position-x: center;
-    background-position-y: center;
+    background-position: center;
     background-size: 15vw;
 }
 
